packages/rust/crates/xiuxian-wendao-julia/tests/unit/plugin/snapshots/module_sort_key_uses_package_order_hierarchy.snap
---
source: packages/rust/crates/xiuxian-wendao-julia/src/plugin/../../tests/unit/plugin/common.rs
assertion_line: 140
expression: payload
---
[
  {
    "key": [
      [
        0,
        ""
      ]
    ],
    "path": "package.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        0,
        "UsersGuide"
      ]
    ],
    "path": "UsersGuide/package.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        1,
        "Controllers"
      ]
    ],
    "path": "Controllers/package.mo"
  },
  {
    "key": [
      [
        0,
        ""
      ],
      [
        1,
        "Controllers"
      ],
      [
        0,
        "Examples"
      ]
    ],
    "path": "Controllers/Examples/package.mo"
  }
]
